[workspace]
resolver = "2"

members = [
"examples/waterfall"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[package]
name = "sdw"

version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11"
serde = { version = "1.0", features = ["derive"] }
time = { version ="0.3", features =["macros","serde","formatting","parsing"] }
clap = { version = "4.1.6", features = ["derive"] }
apache-avro = { version = "0.14.0", features = ["derive"] }
tui = "0.19"
crossterm = "0.25"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
criterion = "0.3"

[[bench]]
name = "locker"
harness = false