[package]
name = "waterfall"

version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdw = { path = "../.." }
winit = "0.28.2"
wgpu = "0.15"
log = "0.4"
env_logger = "0.10"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
itertools = "0.10.5"
vello = { git = "https://github.com/linebender/vello.git" }
clap = { workspace = true }